# web-addr2line

./: .gitignore  index.html  package-lock.json  package.json  script.js  styles.css
.github/workflows/: build.yml  common.yml  deploy.yml
backend/: Dockerfile  main.py  requirements.txt
lib/: rust_addr2line_wasm.js  rust_addr2line_wasm_bg.wasm
rust_addr2line_wasm/: Cargo.toml
rust_addr2line_wasm/src/: lib.rs
www/: index.html  script.js  styles.css
www/assets/: site.webmanifest
